--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "parse": "^3.5.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
